Support for :enabled selector on Anchor & Area elements https://bugs.webkit.org/show_bug.cgi?id=134826

Reviewed by Darin Adler.

Source/WebCore:
Updates the PseudoClassEnabled selector checker to check for Anchor & Area
elements with a 'href' attribute.

Spec: http://html.spec.whatwg.org/#selector-enabled

Test: fast/css/css-selector-enabled-links.html

* css/SelectorCheckerTestFunctions.h:
(WebCore::isEnabled): Added check for anchor & area elements.

LayoutTests:
Added tests for :enabled CSS selector on Anchor & Area elements.

* fast/css/css-selector-enabled-links-expected.txt: Added.
* fast/css/css-selector-enabled-links.html: Added.


Canonical link: https://commits.webkit.org/153224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171671 268f45cc-cd09-0410-ab3c-d52691b4dbfc